--- a/1811.03116/pqg_v4.3-arxiv-v3.tex
+++ b/1811.03116/pqg_v4.3-arxiv-v3.tex
@@ -1207,18 +1207,18 @@ As in the derivation of the GKSL equation, we now define the two Hermitian opera
 )
 \end{align}
 so that we can write Equation \eqref{eq:MEderiv2} as
-\begin{align}
+\begin{multline}
  \frac{\partial\psiz}{\partial t}
  =
  -i[\Hq(\z;t),\psizt]
  +
  \linrate^{\ag\bg}(\z;t)\psizt
 \L_{\ag}\psizt \L_{\bg}^\dagger
-  + 
+  + \\
  \int d\z' \rate^{\alpha\beta}(\z|\z';t)
   \L_{\alpha}\varrho(\z';t)\L_{\beta}^\dagger
   +\{\NE(\z;t),\psizt\}_+
-\end{align}
+\end{multline}
 Having subtracted $\psizt$ from Equation \eqref{eq:cq-kraus-tp} the trace-preservation condition, Equation \eqref{eq:kraus-tp} becomes Equation \eqref{eq:tp-intime} i.e.
 \begin{align}
   \int d\z\tr\frac{\partial\psizt}{\partial t}=0 
@@ -1379,8 +1379,8 @@ Making the Markovian approximation so that we may drop the explicit dependence o
 &=\rate_h(\z)\psiz-X_h\ab\cdot\nabla\psiz
 +
 \nabla\cdot\friction_h\ab\psiz
-+
-\nabla\cdot D^{\alpha\beta}(\z)\psiz\cdot\overleftarrow{\nabla}
+\nonumber\\
+&\qquad + \nabla\cdot D^{\alpha\beta}(\z)\psiz\cdot\overleftarrow{\nabla}
 + \cdots
 \label{eq:W-KM}
 \end{align}
@@ -1640,7 +1640,8 @@ We take a simple realisation of the discrete dynamics, that of Equation \eqref{e
 \begin{align}
 \frac{\partial\varrho(q,p)}{\partial t}
  =& -i[\Hqm(q,p),\varrho(q,p)]+\{h^{00},\varrho(q,p)\PB
-+\sum_{\alpha,\beta}
++ \nonumber\\
+& \quad\sum_{\alpha,\beta}
 \frac{1}{\tau}\Big[
 \L_\alpha 
 \varrho(q-\tau\frac{\partial h^{\alpha\beta}}{\partial p},p+\tau\frac{\partial h^{\alpha\beta}}{\partial q})
@@ -1748,7 +1749,8 @@ If we take the Lindblad operators to be local field operators $\lax$, then the f
 \rateabxd
 \L_{\alpha}(x)\psizd\L_{\beta}^\dagger(y)
   -
-\frac{1}{2}\rate_h\ab(\z;x,y)\{\lby\lax,\psiz\}_+   
+\nonumber\\
+& \qquad \frac{1}{2}\rate_h\ab(\z;x,y)\{\lby\lax,\psiz\}_+   
 \\
   &=-i[\Hq(\z),\psiz]
  + 
@@ -1759,7 +1761,7 @@ If we take the Lindblad operators to be local field operators $\lax$, then the f
 \Big]
 \nonumber\\
 &
--
+\qquad -
 \int dx  
 \Big[  X^{\alpha\beta}_h(\z;x)
 \lax\cdot\nabla \psiz\lbx
@@ -1769,7 +1771,7 @@ If we take the Lindblad operators to be local field operators $\lax$, then the f
 \L_{\beta}^\dagger(y)
 \overleftarrow{\nabla}\nonumber\\
 &
--\int dx\nabla\cdot[
+\qquad-\int dx\nabla\cdot[
 \friction^{\alpha\beta}_h(\z;x,y)
 \lax\psiz\lby]
   \Big] +\cdots  
@@ -2127,14 +2129,14 @@ $\frac{\delta h\ab}{\delta g_{ab}}\frac{\delta\psiz}{\delta \pi^{ab}}$ since it 
 zeroth order in $\tau$ is needed to recover the classical limit of general
 relativity. 
 We now require a positive transition matrix $\rate_h\ab(\z|\z-\dist;x,y)$  (except for the $\rate_{h}^{00}(\z|\z-\dist;x,y)$ component), and that each moment transform as a density to ensure invariance of the dynamics under spatial diffeomorphism. An example of such a realisation for the discrete master equation is given in  \cite{UCL2022constraints}, namely for $\alpha,\beta\neq 0$, 
-\begin{align}
+\begin{multline}
 \int dy \ddf N\rate_h\ab(\z|\z-\dist;x,y)\lax\psizd\lby
-=
+=\\
 \frac{N}{\tau}
 \exp\Big[{\tau{({h^{-1})}(\z;x)}\{h(\z;x),\cdot\PB}\Big]^\alpha_\gamma h^{\beta\gamma}(\z;x)
 \lax\psiz\lbx
 \label{eq:modelcov}
-\end{align}
+\end{multline}
 where $\exp[M]^\alpha_\gamma$ are the components of the matrix exponential of the matrix $M$ and it is purely local in $x$. Here, $M$ has components $M_i^k=\Big[{\tau{({h^{-1})_{ij}}(\z)}\{h^{jk}(\z),\cdot\PB}\Big]$ and  $\rate\ab(\z;x,y)=\frac{1}{\tau}h\ab(\z;x)\delta(x,y)$. 
 and gives a Kramers-Moyal expansion, up to constants of
 \begin{align}
@@ -2525,23 +2527,25 @@ In such a case, we have
 \begin{align}
 \frac{d\hatA_H(\z;t)}{dt}
 =&
-\frac{\partial\hatA_H(\z;t)}{\partial t}
+\, \frac{\partial\hatA_H(\z;t)}{\partial t}
 +i[\Hq(\z),\hatA_H(\z;t)]
 \nonumber\\
  &+ \int dx\Big[\ddist 
   \rate^{\alpha\beta}(\z+\dist|\z;x,y)\L_{\beta}^\dagger(y)
   \hatA_H(\z+\dist,t)
   \L_{\alpha}(x)
-  -
+  \nonumber\\
+  &-
   \frac{1}{2}
 \rate(\z;x,y)
 \{\L_\beta^\dagger(y)\L_\alpha(x),\hatA_H(\z;t)
 \}_+\Big]
 \nonumber\\
 =&
-\frac{\partial\hatA_H(\z;t)}{\partial t}
+\,\frac{\partial\hatA_H(\z;t)}{\partial t}
 +i[\Hq(\z),\hatA_H(\z;t)]
-+\int 
+\nonumber\\
+&+\int 
   \rate\ab(\z;x,y)\Big[\L_{\beta}^\dagger(y)\hatA_H(\z;t)\L_{\alpha}(x)
   -\frac{1}{2}
 \{\L_{\beta}^\dagger(y)\L_{\alpha}(x),\hatA_H(\z;t)\}_+   
