--- a/2307.05607/chapter2.tex
+++ b/2307.05607/chapter2.tex
@@ -1347,6 +1347,8 @@ x-1,\quad &\text{if}\hspace{0.5cm}0<x\leq 4.\end{cases}\]It is an increasing fun
 \caption{  An increasing function with a jump discontinuity.}\label{figure15}
 \end{figure}
 
+\newpage
+
 The following is a characterization of the discontinuities of a  monotonic function.
 \begin{theorem}[label=23021103]{}
 Let $f:[a,b]\rightarrow\mathbb{R}$ be a  monotonic function. For any $x_0$ in $(a, b]$, 
