--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,145 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-12-04 09:45:09 -0500 
+%% Created for Pete Su at 2024-01-16 08:25:08 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Ballentine2016,
+	author = {Ballentine, Leslie E.},
+	date-added = {2024-01-16 08:24:52 -0500},
+	date-modified = {2024-01-16 08:25:08 -0500},
+	doi = {10.1007/s10701-016-9991-0},
+	issn = {1572-9516},
+	journal = {Foundations of Physics},
+	number = {8},
+	pages = {973--1005},
+	publisher = {Springer Science and Business Media LLC},
+	title = {Propensity, Probability, and Quantum Theory},
+	url = {http://dx.doi.org/10.1007/s10701-016-9991-0},
+	volume = {46},
+	year = {2016},
+	bdsk-url-1 = {http://dx.doi.org/10.1007/s10701-016-9991-0}}
+
+@article{Ballentine1987,
+	author = {Ballentine, L. E. and Jarrett, Jon P.},
+	date-added = {2024-01-16 08:23:52 -0500},
+	date-modified = {2024-01-16 08:24:01 -0500},
+	doi = {10.1119/1.15059},
+	issn = {1943-2909},
+	journal = {American Journal of Physics},
+	number = {8},
+	pages = {696--701},
+	publisher = {American Association of Physics Teachers (AAPT)},
+	title = {Bell's theorem: Does quantum mechanics contradict relativity?},
+	url = {http://dx.doi.org/10.1119/1.15059},
+	volume = {55},
+	year = {1987},
+	bdsk-url-1 = {http://dx.doi.org/10.1119/1.15059}}
+
+@article{Ballentine1970,
+	author = {Ballentine, Leslie E},
+	date-added = {2024-01-16 08:23:11 -0500},
+	date-modified = {2024-01-16 08:23:19 -0500},
+	journal = {Reviews of modern physics},
+	number = {4},
+	pages = {358},
+	publisher = {APS},
+	title = {The statistical interpretation of quantum mechanics},
+	volume = {42},
+	year = {1970}}
+
+@book{Donoghue2022,
+	author = {Donoghue, John and Sorbo, Lorenzo},
+	date-added = {2024-01-16 08:21:54 -0500},
+	date-modified = {2024-01-16 08:22:06 -0500},
+	publisher = {Princeton University Press},
+	title = {A prelude to quantum field theory},
+	year = {2022}}
+
+@article{Ballentine1986,
+	author = {Ballentine, L. E.},
+	date-added = {2024-01-16 07:58:39 -0500},
+	date-modified = {2024-01-16 07:58:50 -0500},
+	doi = {10.1119/1.14783},
+	issn = {1943-2909},
+	journal = {American Journal of Physics},
+	number = {10},
+	pages = {883--889},
+	publisher = {American Association of Physics Teachers (AAPT)},
+	title = {Probability theory in quantum mechanics},
+	url = {http://dx.doi.org/10.1119/1.14783},
+	volume = {54},
+	year = {1986},
+	bdsk-url-1 = {http://dx.doi.org/10.1119/1.14783}}
+
+@article{Ballentine1990,
+	author = {Ballentine, Leslie E},
+	date-added = {2024-01-16 07:54:21 -0500},
+	date-modified = {2024-01-16 07:54:28 -0500},
+	journal = {Foundations of Physics},
+	number = {11},
+	pages = {1329--1343},
+	publisher = {Springer},
+	title = {Limitations of the projection postulate},
+	volume = {20},
+	year = {1990}}
+
+@article{Bah2022,
+	author = {Ibrahima Bah and Daniel S. Freed and Gregory W. Moore and Nikita Nekrasov and Shlomo S. Razamat and Sakura Schafer-Nameki},
+	date-added = {2024-01-16 07:49:58 -0500},
+	date-modified = {2024-01-16 07:50:14 -0500},
+	journal = {arXiv preprint},
+	note = {\href{http://arxiv.org/abs/2211.04467v2}{arxiv:2211.04467}},
+	title = {{A Panorama Of Physical Mathematics c. 2022}},
+	year = {2022}}
+
+@book{Bacciagaluppi2009,
+	author = {Bacciagaluppi, Guido and Valentini, Antony},
+	date-added = {2024-01-16 07:49:06 -0500},
+	date-modified = {2024-01-16 07:49:30 -0500},
+	publisher = {Cambridge University Press},
+	title = {Quantum theory at the crossroads: reconsidering the 1927 Solvay conference},
+	year = {2009}}
+
+@article{Anderson1972,
+	author = {Anderson, P. W.},
+	date-added = {2024-01-16 07:40:57 -0500},
+	date-modified = {2024-01-16 07:41:06 -0500},
+	doi = {10.1126/science.177.4047.393},
+	issn = {1095-9203},
+	journal = {Science},
+	number = {4047},
+	pages = {393--396},
+	publisher = {American Association for the Advancement of Science (AAAS)},
+	title = {More Is Different: Broken symmetry and the nature of the hierarchical structure of science.},
+	url = {http://dx.doi.org/10.1126/science.177.4047.393},
+	volume = {177},
+	year = {1972},
+	bdsk-url-1 = {http://dx.doi.org/10.1126/science.177.4047.393}}
+
+@article{Aharonov1980,
+	author = {Aharonov, Yakir and Albert, David Z},
+	date-added = {2024-01-16 07:37:33 -0500},
+	date-modified = {2024-01-16 07:37:43 -0500},
+	journal = {Physical Review D},
+	number = {12},
+	pages = {3316},
+	publisher = {APS},
+	title = {States and observables in relativistic quantum field theories},
+	volume = {21},
+	year = {1980}}
+
+@misc{Zwiebach-2018-Notes,
+	author = {Zwiebach, Barton},
+	date-added = {2024-01-16 07:33:59 -0500},
+	date-modified = {2024-01-16 07:35:59 -0500},
+	howpublished = {Online Notes},
+	title = {{Time Dependent Perturbation Theory}},
+	year = {2018}}
 
 @book{Tumulka2022,
 	author = {Tumulka, Roderich},
@@ -425,14 +558,6 @@
 	note = {\href{https://arxiv.org/abs/1702.00319}{arXiv:1702.00319}},
 	title = {{EPFL lectures on general relativity as a quantum field theory}},
 	year = {2017}}
-
-@book{Donoghue2022,
-	author = {Donoghue, John and Sorbo, Lorenzo},
-	date-added = {2023-09-03 08:12:19 -0400},
-	date-modified = {2023-09-03 08:12:21 -0400},
-	publisher = {Princeton University Press},
-	title = {A prelude to quantum field theory},
-	year = {2022}}
 
 @article{Crispino2008,
 	author = {Lu{\'{\i}}s C. B. Crispino and Atsushi Higuchi and George E. A. Matsas},
