--- a/bib.bib
+++ b/bib.bib
@@ -1,7 +1,7 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2024-01-16 08:25:08 -0500 
+%% Created for Pete Su at 2024-01-16 08:57:59 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -10,15 +10,15 @@
 
 @article{Ballentine2016,
 	author = {Ballentine, Leslie E.},
-	date-added = {2024-01-16 08:24:52 -0500},
-	date-modified = {2024-01-16 08:25:08 -0500},
+	date-added = {2024-01-16 08:57:36 -0500},
+	date-modified = {2024-01-16 08:57:59 -0500},
 	doi = {10.1007/s10701-016-9991-0},
 	issn = {1572-9516},
-	journal = {Foundations of Physics},
+	journal = {Found. Phys.},
 	number = {8},
 	pages = {973--1005},
 	publisher = {Springer Science and Business Media LLC},
-	title = {Propensity, Probability, and Quantum Theory},
+	title = {{Propensity, Probability, and Quantum Theory}},
 	url = {http://dx.doi.org/10.1007/s10701-016-9991-0},
 	volume = {46},
 	year = {2016},
