fix functional notation because it was wierd

--- a/quant-ph-0609163v2/myths.tex
+++ b/quant-ph-0609163v2/myths.tex
@@ -2001,10 +2001,10 @@ replaced by anticommutators, from which
 The existence of the Hamiltonian (\ref{hamfi}) allows us 
 to introduce the functional Schr\"odinger equation
 \begin{equation}\label{funcsch}
-H[\hat{\pi},\phi] \Psi[\phi;t)=i\partial_t \Psi[\phi;t) ,
+H[\hat{\pi},\phi] \Psi[\phi;t]=i\partial_t \Psi[\phi;t] ,
 \end{equation}
 where
-$\Psi[\phi;t)$ is a functional of $\phi({\bf x})$ and a function of 
+$\Psi[\phi;t]$ is a functional of $\phi({\bf x})$ and a function of 
 $t$, while 
 \begin{equation}
 \hat{\pi}({\bf x}) = -i\frac{\delta}{\delta\phi({\bf x})}
@@ -2017,7 +2017,7 @@ Unlike the Klein-Gordon equation, the functional
 Schr\"odinger equation (\ref{funcsch}) is a first-order differential 
 equation in the time derivative. Consequently, the quantity
 \begin{equation}\label{rhofi}
-\rho[\phi;t)=\Psi^*[\phi;t)\Psi[\phi;t) 
+\rho[\phi;t]=\Psi^*[\phi;t]\Psi[\phi;t] 
 \end{equation}
 can be consistently interpreted as a conserved probability density.
 It represents the probability that the field has the 
@@ -2032,7 +2032,7 @@ of relativistic QM? According to QFT, the fundamental
 objects in nature are not particles, but fields.
 Consequently, the fundamental wave function(al) that
 needs to have a well-defined probabilistic interpretation 
-is not $\psi({\bf x},t)$, but $\Psi[\phi;t)$. 
+is not $\psi({\bf x},t)$, but $\Psi[\phi;t]$. 
 Thus, the fact that, in the case of Klein-Gordon equation,
 $\psi({\bf x},t)$ cannot be interpreted 
 probabilistically, is no longer a problem from this more 
