--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,89 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2024-01-18 18:50:16 -0500 
+%% Created for Pete Su at 2024-01-18 19:34:35 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Carroll2021,
+	author = {Carroll, Sean M. and Singh, Ashmeet},
+	date-added = {2024-01-18 19:34:29 -0500},
+	date-modified = {2024-01-18 19:34:35 -0500},
+	doi = {10.1103/physreva.103.022213},
+	issn = {2469-9934},
+	journal = {Phys. Rev. A},
+	note = {\href{http://arxiv.org/abs/2005.12938v3}{arxiv:2005.12938v3}},
+	number = {2},
+	publisher = {American Physical Society (APS)},
+	title = {Quantum mereology: Factorizing Hilbert space into subsystems with quasiclassical dynamics},
+	url = {http://dx.doi.org/10.1103/physreva.103.022213},
+	volume = {103},
+	year = {2021},
+	bdsk-url-1 = {http://dx.doi.org/10.1103/physreva.103.022213}}
+
+@book{Bub2016,
+	author = {Bub, Jeffrey},
+	date-added = {2024-01-18 19:32:21 -0500},
+	date-modified = {2024-01-18 19:32:29 -0500},
+	publisher = {Oxford University Press},
+	title = {Bananaworld: Quantum mechanics for primates},
+	year = {2016}}
+
+@article{Bru2002,
+	author = {Bru{\ss}, Dagmar},
+	date-added = {2024-01-18 19:30:38 -0500},
+	date-modified = {2024-01-18 19:30:44 -0500},
+	doi = {10.1063/1.1494474},
+	issn = {1089-7658},
+	journal = {J. Math. Phys.},
+	number = {9},
+	pages = {4237--4251},
+	publisher = {AIP Publishing},
+	title = {Characterizing entanglement},
+	url = {http://dx.doi.org/10.1063/1.1494474},
+	volume = {43},
+	year = {2002},
+	bdsk-url-1 = {http://dx.doi.org/10.1063/1.1494474}}
+
+@article{Boughn2018a,
+	author = {Boughn, Stephen},
+	date-added = {2024-01-18 19:27:52 -0500},
+	date-modified = {2024-01-18 19:30:08 -0500},
+	journal = {arXiv preprint},
+	note = {\href{https://arxiv.org/abs/1806.07925}{1806.07925}},
+	title = {There Is No Action at a Distance in Quantum Mechanics, Spooky or Otherwise},
+	year = {2018},
+	bdsk-url-1 = {http://rgdoi.net/10.13140/RG.2.2.33945.93280},
+	bdsk-url-2 = {https://doi.org/10.13140/RG.2.2.33945.93280}}
+
+@article{Boughn2018,
+	author = {Stephen Boughn},
+	date-added = {2024-01-18 19:18:33 -0500},
+	date-modified = {2024-01-18 19:18:43 -0500},
+	journal = {arXiv preprint},
+	note = {\href{http://arxiv.org/abs/1801.06196v1}{arxiv:1801.06196}},
+	title = {{A Quantum Story}},
+	year = {2018}}
+
+@article{Boisvert2012,
+	author = {Boisvert, Jean-S{\'e}bastien and Marchildon, Louis},
+	date-added = {2024-01-18 19:17:53 -0500},
+	date-modified = {2024-01-18 19:17:59 -0500},
+	doi = {10.1007/s10701-012-9695-z},
+	issn = {1572-9516},
+	journal = {Found. Phys.},
+	note = {\href{http://arxiv.org/abs/1207.5230v2}{arxiv:1207.5230v2}},
+	number = {3},
+	pages = {294--309},
+	publisher = {Springer Science and Business Media LLC},
+	title = {Absorbers in the Transactional Interpretation of Quantum Mechanics},
+	url = {http://dx.doi.org/10.1007/s10701-012-9695-z},
+	volume = {43},
+	year = {2012},
+	bdsk-url-1 = {http://dx.doi.org/10.1007/s10701-012-9695-z}}
 
 @article{Baumann2016,
 	author = {Veronika Baumann and Arne Hansen and Stefan Wolf},
@@ -6839,14 +6916,14 @@
 @article{Bohr1928,
 	author = {Niels Bohr},
 	date-added = {2023-07-23 08:19:34 -0400},
-	date-modified = {2023-07-23 08:20:45 -0400},
+	date-modified = {2024-01-18 19:17:25 -0500},
 	doi = {10.1038/121580a0},
 	journal = {Nature},
 	note = {Como Lecture},
 	number = {3050},
 	pages = {580--590},
 	publisher = {Springer Science and Business Media {LLC}},
-	title = {The Quantum Postulate and the Recent Development of Atomic Theory1},
+	title = {The Quantum Postulate and the Recent Development of Atomic Theory},
 	url = {https://doi.org/10.1038%2F121580a0},
 	volume = {121},
 	year = 1928,
@@ -11172,19 +11249,6 @@ horizon.},
 	url = {https://doi.org/10.1090/conm/214},
 	year = {1998},
 	bdsk-url-1 = {https://doi.org/10.1090/conm/214}}
-
-@article{Boughn2018Story,
-	author = {{Boughn}, Stephen},
-	date-added = {2019-02-24 18:21:01 +0000},
-	date-modified = {2023-07-26 10:01:38 -0400},
-	eid = {arxiv:1801.06196},
-	eprint = {1801.06196},
-	journal = {arXiv},
-	keywords = {Physics - History and Philosophy of Physics, Quantum Physics},
-	note = {\href{https://arxiv.org/abs/1801.06196}{arxiv:1801.06196}},
-	primaryclass = {physics.hist-ph},
-	title = {{A Quantum Story}},
-	year = {2018}}
 
 @book{Lancaster2014-QFT,
 	author = {Lancaster, T. and Blundell, S.J.},
