--- a/2401.09350/book.tex
+++ b/2401.09350/book.tex
@@ -24,14 +24,35 @@
 
 \makeindex
 
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={6.1in, 9.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\linespread{1.1}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+% hyperref last because otherwise some things go wrong.
+\usepackage{hyperref}
+\hypersetup{colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true}
 \hypersetup{
-    colorlinks,
-    citecolor=black,
-    filecolor=black,
-    linkcolor=black,
-    urlcolor=black
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
 }
 
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
 \newcommand\numberthis{\addtocounter{equation}{1}\tag{\theequation}}
 
 \SetKwComment{Comment}{$\triangleright$\ }{}
