--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,80 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2024-01-19 17:01:06 -0500 
+%% Created for Pete Su at 2024-01-21 09:33:43 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Cuffaro2023,
+	author = {Cuffaro, Michael E.},
+	date-added = {2024-01-21 09:33:28 -0500},
+	date-modified = {2024-01-21 09:33:43 -0500},
+	doi = {10.3390/e25101410},
+	issn = {1099-4300},
+	journal = {Entropy-switz.},
+	note = {\href{http://arxiv.org/abs/2308.16371v3}{arxiv:2308.16371v3}},
+	number = {10},
+	pages = {1410},
+	publisher = {MDPI AG},
+	title = {The Measurement Problem Is a Feature, Not a Bug},
+	url = {http://dx.doi.org/10.3390/e25101410},
+	volume = {25},
+	year = {2023},
+	bdsk-url-1 = {http://dx.doi.org/10.3390/e25101410}}
+
+@article{Cook1988,
+	author = {Cook, Richard J},
+	date-added = {2024-01-21 09:32:49 -0500},
+	date-modified = {2024-01-21 09:32:55 -0500},
+	journal = {Physica Scripta},
+	number = {T21},
+	pages = {49},
+	publisher = {IOP Publishing},
+	title = {What are quantum jumps?},
+	volume = {1988},
+	year = {1988}}
+
+@book{Coecke2017,
+	author = {Coecke, Bob and Kissinger, Aleks},
+	date-added = {2024-01-21 09:31:35 -0500},
+	date-modified = {2024-01-21 09:31:45 -0500},
+	doi = {10.1017/9781316219317},
+	isbn = {9781316219317},
+	publisher = {Cambridge University Press},
+	title = {Picturing Quantum Processes: A First Course in Quantum Theory and Diagrammatic Reasoning},
+	url = {http://dx.doi.org/10.1017/9781316219317},
+	year = {2017},
+	bdsk-url-1 = {http://dx.doi.org/10.1017/9781316219317}}
+
+@book{Landry2018,
+	date-added = {2024-01-21 09:28:11 -0500},
+	date-modified = {2024-01-21 09:28:33 -0500},
+	doi = {10.1093/oso/9780198748991.001.0001},
+	editor = {Elaine Landry},
+	isbn = {9780198748991},
+	journal = {Oxford Scholarship Online},
+	publisher = {Oxford University Press},
+	title = {Categories for the Working Philosopher},
+	url = {http://dx.doi.org/10.1093/oso/9780198748991.001.0001},
+	year = {2018},
+	bdsk-url-1 = {http://dx.doi.org/10.1093/oso/9780198748991.001.0001}}
+
+@book{Spekkens2016,
+	date-added = {2024-01-21 09:23:31 -0500},
+	date-modified = {2024-01-21 09:24:43 -0500},
+	doi = {10.1007/978-94-017-7303-4},
+	editor = {Giulio Chiribella and Robert W. Spekkens},
+	isbn = {9789401773034},
+	issn = {2365-6425},
+	journal = {Fund. Theor. Phys.},
+	publisher = {Springer Netherlands},
+	title = {Quantum Theory: Informational Foundations and Foils},
+	url = {http://dx.doi.org/10.1007/978-94-017-7303-4},
+	year = {2016},
+	bdsk-url-1 = {http://dx.doi.org/10.1007/978-94-017-7303-4}}
 
 @article{Bruch2024,
 	archiveprefix = {arXiv},
@@ -407,15 +475,6 @@
 	title = {Optical interferometry in astronomy},
 	volume = {66},
 	year = {2003}}
-
-@article{Cuffaro2023,
-	author = {Cuffaro, Michael E},
-	date-added = {2023-09-06 20:46:07 -0400},
-	date-modified = {2023-09-06 20:46:38 -0400},
-	journal = {arXiv preprint},
-	note = {\href{https://arxiv.org/abs/2308.16371}{arXiv:2308.16371}},
-	title = {The Measurement Problem Is a Feature, Not a Bug--Schematising the Observer as a Postulate and the Quantum-Mechanical Concept of an Open System on an Informational, or (neo-) Bohrian, Approach},
-	year = {2023}}
 
 @book{Janas2022,
 	author = {Michael Janas and Michael E. Cuffaro and Michel Janssen},
@@ -8214,17 +8273,17 @@
 	volume = {58},
 	year = {1945}}
 
-@incollection{Coecke2015,
+@incollection{Coecke2017a,
 	author = {Coecke, Bob and Kissinger, Aleks},
 	booktitle = {Categories for the Working Philosopher},
 	date-added = {2023-07-16 08:15:04 -0400},
-	date-modified = {2023-07-16 08:19:28 -0400},
+	date-modified = {2024-01-21 09:31:41 -0500},
 	editor = {Elaine Landry},
 	note = {\href{https://arxiv.org/abs/1510.05468}{arxiv:1510.05468}},
 	pages = {286--328},
 	publisher = {{Oxford University Press}},
 	title = {{Categorical Quantum Mechanics I: Causal Quantum Processes}},
-	year = {2015}}
+	year = {2017}}
 
 @book{Cisinski2019,
 	author = {Cisinski, Denis-Charles},
