--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,192 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2024-01-21 09:33:43 -0500 
+%% Created for Pete Su at 2024-01-21 17:07:07 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@book{Durr2020,
+	author = {D{\"u}rr, Detlef and Lazarovici, Dustin},
+	date-added = {2024-01-21 17:07:01 -0500},
+	date-modified = {2024-01-21 17:07:07 -0500},
+	doi = {10.1007/978-3-030-40068-2},
+	isbn = {9783030400682},
+	publisher = {Springer International Publishing},
+	title = {Understanding Quantum Mechanics: The World According to Modern Quantum Foundations},
+	url = {http://dx.doi.org/10.1007/978-3-030-40068-2},
+	year = {2020},
+	bdsk-url-1 = {http://dx.doi.org/10.1007/978-3-030-40068-2}}
+
+@article{Durr1998,
+	author = {D{\"u}rr, S and Nonn, T and Rempe, G},
+	date-added = {2024-01-21 17:06:23 -0500},
+	date-modified = {2024-01-21 17:06:31 -0500},
+	journal = {Nature},
+	number = {6697},
+	pages = {33--37},
+	publisher = {Nature Publishing Group UK London},
+	title = {Origin of quantum-mechanical complementarity probed by a `which-way'experiment in an atom interferometer},
+	volume = {395},
+	year = {1998}}
+
+@article{Duck1998,
+	author = {Duck, Ian and Sudarshan, E. C. G.},
+	date-added = {2024-01-21 17:04:03 -0500},
+	date-modified = {2024-01-21 17:05:40 -0500},
+	doi = {10.1119/1.18860},
+	issn = {1943-2909},
+	journal = {Am. J. Phys.},
+	number = {4},
+	pages = {284--303},
+	publisher = {American Association of Physics Teachers (AAPT)},
+	title = {Toward an understanding of the spin-statistics theorem},
+	url = {http://dx.doi.org/10.1119/1.18860},
+	volume = {66},
+	year = {1998},
+	bdsk-url-1 = {http://dx.doi.org/10.1119/1.18860}}
+
+@book{Dragoman2004,
+	author = {Dragoman, Daniela and Dragoman, Mircea},
+	date-added = {2024-01-21 17:03:12 -0500},
+	date-modified = {2024-01-21 17:03:16 -0500},
+	doi = {10.1007/978-3-662-09647-5},
+	isbn = {9783662096475},
+	issn = {1612-3018},
+	journal = {The Frontiers Collection},
+	publisher = {Springer Berlin Heidelberg},
+	title = {Quantum-Classical Analogies},
+	url = {http://dx.doi.org/10.1007/978-3-662-09647-5},
+	year = {2004},
+	bdsk-url-1 = {http://dx.doi.org/10.1007/978-3-662-09647-5}}
+
+@article{Doyen2015,
+	author = {Doyen, G. and Drakova, D.},
+	date-added = {2024-01-21 17:01:10 -0500},
+	date-modified = {2024-01-21 17:02:12 -0500},
+	doi = {10.1007/s10701-015-9914-5},
+	issn = {1572-9516},
+	journal = {Found. Phys.},
+	note = {\href{https://arxiv.org/abs/1408.2716}{arXiv:1408.2716}},
+	number = {8},
+	pages = {959--999},
+	publisher = {Springer Science and Business Media LLC},
+	title = {Copenhagen Quantum Mechanics Emerges from a Deterministic Schr{\"o}dinger Theory in 11 Dimensional Spacetime Including Weak Field Gravitation},
+	url = {http://dx.doi.org/10.1007/s10701-015-9914-5},
+	volume = {45},
+	year = {2015},
+	bdsk-url-1 = {http://dx.doi.org/10.1007/s10701-015-9914-5}}
+
+@article{Donald2002,
+	author = {Donald, Matthew J. and Horodecki, Micha{\l} and Rudolph, Oliver},
+	date-added = {2024-01-21 16:59:59 -0500},
+	date-modified = {2024-01-21 17:02:32 -0500},
+	doi = {10.1063/1.1495917},
+	issn = {1089-7658},
+	journal = {J. Math. Phys.},
+	note = {\href{https://arxiv.org/abs/quant-ph/0105017}{arXiv:quant-ph/0105017}},
+	number = {9},
+	pages = {4252--4272},
+	publisher = {AIP Publishing},
+	title = {The uniqueness theorem for entanglement measures},
+	url = {http://dx.doi.org/10.1063/1.1495917},
+	volume = {43},
+	year = {2002},
+	bdsk-url-1 = {http://dx.doi.org/10.1063/1.1495917}}
+
+@article{DelSanto2019,
+	author = {Del Santo, Flavio and Gisin, Nicolas},
+	date-added = {2024-01-21 16:57:49 -0500},
+	date-modified = {2024-01-21 16:57:57 -0500},
+	doi = {10.1103/physreva.100.062107},
+	issn = {2469-9934},
+	journal = {Phys. Rev. A},
+	note = {\href{http://arxiv.org/abs/1909.03697v2}{arxiv:1909.03697v2}},
+	number = {6},
+	publisher = {American Physical Society (APS)},
+	title = {Physics without determinism: Alternative interpretations of classical physics},
+	url = {http://dx.doi.org/10.1103/physreva.100.062107},
+	volume = {100},
+	year = {2019},
+	bdsk-url-1 = {http://dx.doi.org/10.1103/physreva.100.062107}}
+
+@article{DeRaedt2019,
+	author = {De Raedt, Hans and Katsnelson, Mikhail I. and Willsch, Dennis and Michielsen, Kristel},
+	date-added = {2024-01-21 16:57:04 -0500},
+	date-modified = {2024-01-21 16:57:13 -0500},
+	doi = {10.1016/j.aop.2019.01.012},
+	issn = {0003-4916},
+	journal = {Ann. Phys-new. York.},
+	note = {\href{http://arxiv.org/abs/1805.08583v2}{arxiv:1805.08583v2}},
+	pages = {112--135},
+	publisher = {Elsevier BV},
+	title = {Separation of conditions as a prerequisite for quantum theory},
+	url = {http://dx.doi.org/10.1016/j.aop.2019.01.012},
+	volume = {403},
+	year = {2019},
+	bdsk-url-1 = {http://dx.doi.org/10.1016/j.aop.2019.01.012}}
+
+@book{deMuynck2002,
+	author = {de Muynck, Willem M.},
+	date-added = {2024-01-21 16:56:34 -0500},
+	date-modified = {2024-01-21 16:56:42 -0500},
+	doi = {10.1007/0-306-48047-6},
+	isbn = {9780306480478},
+	publisher = {Springer Netherlands},
+	title = {Foundations of Quantum Mechanics, an Empiricist Approach},
+	url = {http://dx.doi.org/10.1007/0-306-48047-6},
+	year = {2002},
+	bdsk-url-1 = {http://dx.doi.org/10.1007/0-306-48047-6}}
+
+@book{delaPena1996,
+	author = {de la Pe{\~n}a, Luis and Cetto, Ana Mar{\'\i}a},
+	date-added = {2024-01-21 16:55:21 -0500},
+	date-modified = {2024-01-21 16:55:34 -0500},
+	doi = {10.1007/978-94-015-8723-5},
+	isbn = {9789401587235},
+	publisher = {Springer Netherlands},
+	title = {The Quantum Dice},
+	url = {http://dx.doi.org/10.1007/978-94-015-8723-5},
+	year = {1996},
+	bdsk-url-1 = {http://dx.doi.org/10.1007/978-94-015-8723-5}}
+
+@book{delaPena2015,
+	author = {de la Pe{\~n}a, Luis and Cetto, Ana Mar{\'\i}a and Vald{\'e}s Hern{\'a}ndez, Andrea},
+	date-added = {2024-01-21 16:54:38 -0500},
+	date-modified = {2024-01-21 16:54:58 -0500},
+	doi = {10.1007/978-3-319-07893-9},
+	isbn = {9783319078939},
+	publisher = {Springer International Publishing},
+	title = {The Emerging Quantum: The Physics Behind Quantum Mechanics},
+	url = {http://dx.doi.org/10.1007/978-3-319-07893-9},
+	year = {2015},
+	bdsk-url-1 = {http://dx.doi.org/10.1007/978-3-319-07893-9}}
+
+@book{Curtright2005,
+	author = {Curtright, T.L. and Fairlie, D.B. and Zachos, C.K.},
+	date-added = {2024-01-21 16:52:52 -0500},
+	date-modified = {2024-01-21 16:52:58 -0500},
+	isbn = {9789814485876},
+	publisher = {World Scientific Publishing Company},
+	series = {World Scientific Series In 20th Century Physics},
+	title = {Quantum Mechanics In Phase Space: An Overview With Selected Papers},
+	url = {https://books.google.com/books?id=wabUCgAAQBAJ},
+	year = {2005},
+	bdsk-url-1 = {https://books.google.com/books?id=wabUCgAAQBAJ}}
+
+@book{Curtright2013,
+	author = {Curtright, Thomas L and Fairlie, David B and Zachos, Cosmas K},
+	date-added = {2024-01-21 16:50:06 -0500},
+	date-modified = {2024-01-21 16:50:22 -0500},
+	doi = {10.1142/8870},
+	isbn = {9789814520454},
+	publisher = {{World Scientific}},
+	title = {A Concise Treatise on Quantum Mechanics in Phase Space},
+	url = {http://dx.doi.org/10.1142/8870},
+	year = {2013},
+	bdsk-url-1 = {http://dx.doi.org/10.1142/8870}}
 
 @article{Cuffaro2023,
 	author = {Cuffaro, Michael E.},
