--- a/1811.03116/pqg_v4.3-arxiv-v3.tex
+++ b/1811.03116/pqg_v4.3-arxiv-v3.tex
@@ -28,8 +28,8 @@
 \pagestyle{plain}
 
 % these include amsmath and that can cause trouble in older docs.
-\input{../helpers/cmrsum}
-\input{../helpers/fix-underbrace.tex}
+\input{cmrsum}
+\input{fix-underbrace.tex}
 
 \usepackage{microtype}
 
