--- a/scott-1980/scott-1980-ch.tex
+++ b/scott-1980/scott-1980-ch.tex
@@ -3,7 +3,7 @@
 %\usepackage{amsmath,amsthm,amscd,amssymb}
 %\usepackage[noBBpl,sc]{mathpazo}
 \usepackage[full]{textcomp}
-\usepackage[osf]{XCharter}% lining figures in math, osf in text
+\usepackage[osf,proportional]{XCharter}% lining figures in math, osf in text
 \usepackage[scaled=1.04,varqu,varl]{inconsolata}% inconsolata typewriter
 \usepackage[bb=pazo,cal=cm,scr=esstix]{mathalpha}
 \usepackage{eulervm}
