--- a/2401.14311/enc_arxiv.tex
+++ b/2401.14311/enc_arxiv.tex
@@ -8,7 +8,7 @@
 \title{Higher category theory}
 \author{Rune Haugseng}
 
-\date{\today}
+\date{25 Jan 2024}
 
 \newcommand{\nolabelcsquare}[4]{\csquare{#1}{#2}{#3}{#4}{}{}{}{}}
 \newcommand{\AR}{\catname{AR}}
