--- a/2401.14311/encstyle.sty
+++ b/2401.14311/encstyle.sty
@@ -263,11 +263,11 @@ distance=0.2pt}}
 
 %\usepackageo{bm}
 \usepackage[full]{textcomp} % to get the right copyright, etc.
-\usepackage[p,osf]{fbb} % osf in text, tabular lining figures in math
+\usepackage[p,osf]{XCharter} % osf in text, tabular lining figures in math
 \usepackage[scaled=.95,type1]{cabin} % sans serif in style of Gill Sans
 \usepackage[varqu,varl]{zi4}% inconsolata typewriter
 \usepackage[T1]{fontenc} % LY1 also works
-\usepackage[libertine]{newtxmath}
+\usepackage[xcharter,vvarbb,scaled=1.03,smallerops,bigdelims]{newtxmath}
 \usepackage[cal=boondoxo,bb=boondox,frak=boondox]{mathalfa}
 \DeclareMathAlphabet{\mathbfsf}{\encodingdefault}{\sfdefault}{bx}{sl}
 
