--- a/1712.06605/1712.06605.tex
+++ b/1712.06605/1712.06605.tex
@@ -22,21 +22,8 @@
 
 
 %\usepackage{amsmath,amsthm,amscd,amssymb}
-\usepackage[colorlinks=true
-,breaklinks=true
-,urlcolor=blue
-,anchorcolor=blue
-,citecolor=blue
-,filecolor=blue
-,linkcolor=blue
-,menucolor=blue
-,linktocpage=true]{hyperref}
-\hypersetup{
-bookmarksopen=true,
-bookmarksnumbered=true,
-bookmarksopenlevel=10
-}
-\usepackage[papersize={7.0in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+
+\usepackage[papersize={7.0in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
 \linespread{1.05}
 \sloppy
 \raggedbottom
@@ -52,6 +39,20 @@ bookmarksopenlevel=10
 % make sure there is enough TOC for reasonable pdf bookmarks.
 \setcounter{tocdepth}{3}
 
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
 %\usepackage[dotinlabels]{titletoc}
 %\titlelabel{{\thetitle}.\quad}
 %\input{../helpers/psu-plain-titles.tex}
