--- a/2110.03208/RememberingPaddyFinal.tex
+++ b/2110.03208/RememberingPaddyFinal.tex
@@ -1,5 +1,32 @@
 %\documentclass[10pt]{article}
-\documentclass[prd, preprint, longbibliography, 11pt]{revtex4-1}
+\documentclass[prd, preprint, longbibliography, 12pt]{revtex4-2}
+
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={6.8in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\linespread{1.1}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage{microtype}
+
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+%\pdfbookmark[1]{Introduction}{Introduction}
 
 \usepackage{amsmath}
 \usepackage{mathtools}
@@ -24,6 +51,23 @@
 \usepackage{caption}
 \usepackage{soul}
 \usepackage{ragged2e}
+
+% hyperref last because otherwise some things go wrong.
+\usepackage{hyperref}
+\hypersetup{colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
 %\setlength\abovedisplayskip{0 pt}
 
 %\setlength{\topmargin}{-.2in} 
@@ -99,7 +143,9 @@
 \caption{\url{https://www.iucaa.in/~paddy/}} 
 \end{figure*}
 
+\newpage
 \centerline{\bf ABSTRACT}
+\medskip
 \noindent Thanu Padmanabhan was a renowned Indian theoretical physicist known for his research in general relativity, cosmology, and quantum gravity. In an extraordinary career spanning forty-two years, he published more than three hundred research articles, wrote ten highly successful technical and popular books, and mentored nearly thirty graduate students and post-doctoral fellows. He is best known for his deep work investigating gravitation as an emergent thermodynamic phenomenon. He was an outstanding teacher, and an indefatigable populariser of science, who travelled very widely to motivate and inspire young students. Paddy, as he was affectionately known, was also a close friend to his students and collaborators, treating them as part of his extended academic family. On September 17, 2021 Paddy passed away very unexpectedly, at the age of sixty-four and at the height of his research career, while serving as a Distinguished Professor at the Inter-University Centre for Astronomy and Astrophysics, Pune. His untimely demise has come as a shock to his family and friends and colleagues. In this article, several  of them have come together to pay their tributes and share their fond memories of Paddy.
 
 \newpage
