--- a/2401.10981/QFT1arxivv1.tex
+++ b/2401.10981/QFT1arxivv1.tex
@@ -1,5 +1,13 @@
-\documentclass[11pt, letter]{article}
+\documentclass[12pt, letter]{article}
 \usepackage{jheppub}
+
+
+\usepackage[papersize={6.8in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\linespread{1.1}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
 % Comment out these next two lines - they are just to generate dummy text
 \usepackage[english]{babel}
 \usepackage{blindtext}\blindmathtrue
