--- a/2303.03545/main.tex
+++ b/2303.03545/main.tex
@@ -1,5 +1,6 @@
 \UseRawInputEncoding
-\documentclass[pdflatex,sn-mathphys]{sn-jnl}
+\documentclass[pdflatex,sn-mathphys,12pt]{sn-jnl}
+
 \usepackage{graphicx}
 \usepackage{amsmath}
 \usepackage{amsfonts}
@@ -28,6 +29,13 @@
 \jyear{2022}
 \raggedbottom
 %\newcommand{\makeAlph}[1]{\@alph{#1}}
+
+\linespread{1.1}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+\usepackage[small]{titlesec}
+\titlelabel{\thetitle.\quad}
 
 \begin{document}
 
@@ -64,6 +72,7 @@ mechanical sensors. }
 
 \maketitle
 
+\pagestyle{plain}
 
 \section{Introduction}\label{sec1}
     Einstein’s theory of general relativity (GR), our widely accepted theory of gravity, has seen different experimental confirmations~\cite{Einstein1916,walsh1979} by observing massive astronomical objects and their dynamics, most recently by the direct observation of gravitational waves from the merger of two black holes~\cite{abbott2016} and the imaging of a black hole by the event horizon telescope~\cite{akiyama2019}, as well as dedicated satellite missions for testing the basic principle of GR --- the equivalence principle~\cite{touboul2017} and frame dragging effects~\cite{everitt2011}. Laboratory experiments have been continuously increasing the sensitivity of gravity phenomena, including general relativistic effects in atom clocks and atom interferometers~\cite{bothwell2022,asenbaum2017}, tests of the equivalence principle~\cite{rosi2017,asenbaum2020}, precision measurements of Newton's constant~\cite{rosi2014,quinn2013} and tests of the validity of Newton's law at micrometre-scale distances~\cite{geraci2008,tan2020}. 
@@ -86,7 +95,7 @@ mechanical sensors. }
 %\input{Setup/Setup.tex}
 
 \section{Results}\label{sec:setup}
-    The core of the setup is a type-I superconducting trap with a magnetic particle levitated therein, as shown in Fig.~\ref{fig1:setup}b.
+    The core of the setup is a type-I superconducting trap with a magnetic particle levitated therein, as shown in Fig.~\ref{fig1:setup}B.
     The trap is made of tantalum with a critical temperature of $T_c = \SI{4.48}{K}$. We perform the experiment at temperatures below \SI{100}{mK}.
     The trap has an elliptical shape (\SI{4.5}{mm}$~\times$~\SI{3.5}{mm}, with the height from bottom of the trap to the coil being \SI{4.7}{mm}) to confine the modes of the levitated magnetic particle to the axial system of the trap.
     The particle is composed of a set of three $\SI{0.25}{mm} \times \SI{0.25}{mm} \times \SI{0.25}{mm}$ Nd$_{2}$Fe$_{14}$B magnets that are magnetically attached North-to-South as also shown in Fig.~\ref{fig1:setup}b, and a spherical glass bead, \SI{0.25}{mm} radius, that is attached to the middle magnet using stycast. This bead is added to break the rotational symmetry of the zeppelin around the x-axis (angle $\gamma$).
